# jalgpallee-results

./: README.md  pyproject.toml
jalgpall/: __init__.py  game.py
tests/: test.py
tests/fixtures/: basic.html
