[tool.poetry]
name = "jalgpall"
version = "0.1.0"
description = ""
authors = ["Jyrno Ader <jyrno42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.*"
beautifulsoup4 = "4.*"
pytz = "*"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.2"
responses = "^0.12.1"

[tool.pytest.ini_options]
python_files = "test_*.py tests/*.py tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
